--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Duft Punk</title>
+	<meta name="viewport" content="width-device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/queries.css">
 	<script src="https://kit.fontawesome.com/360c16b67b.js" crossorigin="anonymous"></script>
